// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component Should render 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": null,
        "backgroundColor": null,
        "height": null,
        "justifyContent": null,
      },
      null,
    ]
  }
/>
`;

exports[`Column component Should render with childs 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": null,
        "backgroundColor": null,
        "height": null,
        "justifyContent": null,
      },
      null,
    ]
  }
>
  <View />
  <View />
  <View />
  <View />
</View>
`;

exports[`Column component Should render with style 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      Object {
        "alignSelf": "center",
        "backgroundColor": null,
        "height": null,
        "justifyContent": null,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
